# jq-bindings

./: CHANGELOG.md  README.md  cabal.project  jq-bindings.cabal  shell.nix
app/: Main.hs
cbits/: wrapper.c
jq-aeson/: jq-aeson.cabal
jq-aeson/src/Jq/: Aeson.hs
jq-aeson/test/: Spec.hs
jq-bindings-core/: jq-bindings-core.cabal
jq-bindings-core/app/: Main.hs
jq-bindings-core/cbits/: wrapper.c
jq-bindings-core/src/: Jq.hs
jq-bindings-core/src/Jq/: Program.hs
jq-bindings-core/src/Jq/Internal/: Bindings.hsc
jq-codec/: CHANGELOG.md  jq-codec.cabal
jq-codec/app/: Main.hs
jq-codec/src/Jq/: Codec.hs  Decode.hs  Encode.hs
jq-codec/test/: Spec.hs
src/: Jq.hs
src/Jq/Internal/: Bindings.hsc
