cabal-version:      2.4
name:               jq-codec
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends: base
               , jq-bindings-core
               , bytestring
               , linear-base
               , text
  exposed-modules: Jq.Decode
                 , Jq.Encode

executable jq-codec
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.0.0
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: QuickCheck
               , linear-base
               , base
               , quickcheck-instances
               , tasty-quickcheck
               , tasty
               , text
               , bytestring
               , jq-codec
  default-language: Haskell2010
